<resources>
    <string name="app_name">WIP</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="NomeApp">WIP</string>
    <string name="SignUp">Crea un account</string>
    <string name="Signin">Accedi</string>
    <string name="welcome1">Benvenuto su</string>
    <string name="welcome2">Wip!</string>
    <string name="incaricato">Incaricato:</string>

    <string name="compito">ID compito</string>
    <string name="descrizione">Descrizione</string>
    <string name="aggiungi">Aggiungi</string>
    <string name="inserire_compito">Dati attività</string>
    <string name="inserire_desc">Inserire nuova descrizione:</string>

    // stringhe per fragment_dipendente

    <string name="Nome">Nome</string>
    <string name="Cognome">Cognome</string>
    <string name="username">Username</string>
    <string name="Tempo">Assunzione</string>
    <string name="Compiti">Compiti svolti</string>

    <string name="nome">Username</string>
    <string name="cognome">Cognome</string>
    <string name="user_name">Username dipendente</string>
    <string name="tempo">Data</string>
    <string name="compiti_svolti">Compiti svolti dal dipendente</string>
    <string name="email">E-mail</string>
    <string name="seleziona_ruolo">Seleziona ruolo:</string>

    // stringhe per riga_dipendente
    <string name="dipendente">Lavoratore</string>
    <string name="Intro">Tieni sotto controllo i tuoi progetti, quando vuoi, con tutti i membri della tua
        organizzazione!
    </string>
    <string name="accedilogin">ENTRA</string>
    <string name="listaC">Lavori in corso</string>
    <string name="Done">Fatto</string>
    <string name="VUOTO">Nessun Compito</string>
    <string name="lista_dipendenti">Lista dipendenti</string>
    <string name="lista_attivita">Lista attività</string>
    <string name="schedaDipendente">Scheda dipendente</string>
    <string name="registrati">Registrati</string>
    <string name="inserisci">Inserisci i tuoi dati:</string>
    <string name="InsMail">Inserire Mail</string>
    <string name="empty"/>
    <string name="Svolti">Svolti</string>
    <string name="NOME">Nome</string>
    <string name="Chat">chat</string>
    <string name="chat_title">Stai chattando con:</string>
    <string name="chat_messaggio">Messaggio</string>
    <string name="invia">Invia</string>
    <string name="messaggi">Messaggi</string>
    <string name="tvHint">Inserisci i tuoi dati:</string>
    <string name="cellulare">Cellulare</string>
    <string name="vuoto">vuoto</string>
    <string name="chat">Chat</string>
    <string name="dipendenti">Dipendenti</string>
    <string name="attività">Attività</string>
    <string name="mittente">Mittente</string>
    <string name="destinatario">Destinatario</string>
    <string name="InserireM">Inserire Messaggio</string>
    <string name="MessRicevuti">Messaggi Ricevuti</string>
    <string name="AutoLogin">Memorizzare i dati d\'accesso?</string>
    <string name="Immagine">Logo</string>
    <string name="invia_un_messagg">INVIA UN MESSAGGIO</string>

    //spinner

    <array name="Ruoli">
        <item>Capo</item>
        <item>Dipendente</item>
    </array>


</resources>
