<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".dipendente">


    <Button
            android:text="@string/Chat"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:id="@+id/btnChat"
            android:backgroundTint="#4D1CD6" android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/btnCompiti"
            app:layout_constraintEnd_toEndOf="@+id/btnCompiti" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnCompiti"/>
    <TextView
            android:text="@string/schedaDipendente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/nomeCompito2"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"
            android:textSize="30sp"
            android:textColor="#4D1CD6"/>
    <TextView
            android:text="@string/Nome"
            android:layout_width="90dp"
            android:layout_height="25dp"
            android:id="@+id/tvnome"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginStart="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/nomeCompito2"/>
    <TextView
            android:text="@string/Cognome"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:id="@+id/tvcognome"
            android:textStyle="bold"
            android:textSize="16sp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvnome"
            app:layout_constraintStart_toStartOf="@+id/tvnome" app:layout_constraintEnd_toEndOf="@+id/tvnome"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:ems="10"
            android:id="@+id/campoCellulare"
            android:hint="@string/vuoto"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/campoCognome"
            app:layout_constraintStart_toStartOf="@+id/campoCognome"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/campoCognome"/>
    <TextView
            android:text="@string/cellulare"
            android:layout_width="0dp"
            android:layout_height="25dp" android:id="@+id/tvCellulare"
            android:textStyle="bold"
            android:textSize="16sp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvcognome"
            app:layout_constraintStart_toStartOf="@+id/tvcognome" app:layout_constraintEnd_toEndOf="@+id/tvcognome"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:ems="10"
            android:id="@+id/campoNome"
            android:hint="@string/vuoto"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@+id/tvnome" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/tvnome" android:textSize="16sp"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/campoMail"
            android:hint="@string/vuoto"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/campoTempo" app:layout_constraintStart_toEndOf="@+id/tvMail"
            android:layout_marginStart="8dp"
            android:textSize="16sp" app:layout_constraintEnd_toEndOf="@+id/campoTempo"/>
    <TextView
            android:text="@string/email"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:id="@+id/tvMail"
            android:textStyle="bold" android:textSize="16sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTempo"
            app:layout_constraintStart_toStartOf="@+id/tvTempo" app:layout_constraintEnd_toEndOf="@+id/tvTempo"/>
    <Button
            android:text="@string/listaC"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:id="@+id/btnCompiti"
            app:layout_constraintStart_toStartOf="@+id/tvMail"
            app:layout_constraintEnd_toEndOf="@+id/campoMail" android:textColor="#FFFFFF"
            android:backgroundTint="#4D1CD6" android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/campoMail"/>
    <TextView
            android:text="@string/Tempo"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:id="@+id/tvTempo" android:textSize="16sp"
            android:textStyle="bold" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvCellulare"
            app:layout_constraintStart_toStartOf="@+id/tvCellulare" app:layout_constraintEnd_toEndOf="@+id/tvCellulare"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:ems="10"
            android:id="@+id/campoTempo"
            android:hint="@string/vuoto" android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/campoCellulare" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/campoCellulare"
            app:layout_constraintEnd_toEndOf="@+id/campoCellulare"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:ems="10"
            android:id="@+id/campoCognome"
            android:hint="@string/vuoto"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/campoNome"
            app:layout_constraintStart_toStartOf="@+id/campoNome"
            android:textSize="16sp" app:layout_constraintEnd_toEndOf="@+id/campoNome"/>

</android.support.constraint.ConstraintLayout>