<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".LoginFragment">
    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0" android:id="@+id/scrollView2">
        <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                     android:layout_height="wrap_content"
                                                     android:id="@+id/linearLayout" android:background="#7AF1F2F5">

            <TextView
                    android:text="@string/registrati"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tvRegistrati"
                    android:textColor="#4D1CD6" android:textSize="30sp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="32dp"
                    app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                    android:text="@string/inserisci"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvHint1" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.494" app:layout_constraintEnd_toEndOf="parent"
                    android:textSize="18sp" android:textAlignment="textStart"
                    android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/tvRegistrati"
                    android:layout_marginEnd="64dp" android:layout_marginStart="64dp" android:textStyle="bold"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:inputType="textPersonName"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
                    android:textSize="18sp"
                    android:ems="10"
                    android:hint="@string/cellulare"
                    android:background="#EFEFF0"
                    android:id="@+id/editCellulare"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/editCognome"
                    app:layout_constraintStart_toStartOf="@+id/editCognome"
                    app:layout_constraintEnd_toEndOf="@+id/editCognome"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:inputType="text|textEmailAddress"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
                    android:textSize="18sp"
                    android:ems="10"
                    android:hint="@string/email"
                    android:background="#EFEFF0"
                    android:id="@+id/editMail"
                    app:layout_constraintStart_toStartOf="@+id/editPassword" app:layout_constraintEnd_toEndOf="@+id/editPassword"
                    app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/editCellulare"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:inputType="textPassword"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
                    android:textSize="18sp"
                    android:ems="10"
                    android:hint="@string/Password"
                    android:background="#EFEFF0"
                    android:id="@+id/editPassword"
                    app:layout_constraintStart_toStartOf="@+id/editCellulare"
                    app:layout_constraintEnd_toEndOf="@+id/editCellulare"
                    app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/editMail"/>
            <Button
                    android:text="@string/SignUp"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:id="@+id/btnCrea"
                    android:textColor="#FFFFFF" android:backgroundTint="#4D1CD6" android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/mySpinner"
                    app:layout_constraintEnd_toEndOf="@+id/mySpinner" app:layout_constraintHorizontal_bias="1.0"
                    android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/mySpinner"/>


            <Spinner
                    android:id="@+id/mySpinner"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:entries="@array/Ruoli"
                    android:visibility="visible"
                    android:verticalScrollbarPosition="defaultPosition"
                    android:keepScreenOn="false" android:popupElevation="20dp"
                    android:popupBackground="@color/common_google_signin_btn_text_dark_default"
                    android:background="#EFEFF0"
                    android:textAlignment="viewStart"
                    app:layout_constraintTop_toBottomOf="@+id/tvHint2"
                    android:spinnerMode="dialog"
                    app:layout_constraintStart_toStartOf="@+id/tvHint2"
                    app:layout_constraintEnd_toEndOf="@+id/tvHint2" app:layout_constraintHorizontal_bias="1.0"/>
            <TextView
                    android:text="@string/seleziona_ruolo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvHint2"
                    android:textSize="18sp"
                    android:textAlignment="viewStart"
                    app:layout_constraintStart_toStartOf="@+id/editMail" app:layout_constraintEnd_toEndOf="@+id/editMail"
                    android:textStyle="bold" android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/editPassword"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editCognome"
                    app:layout_constraintStart_toStartOf="@+id/editNome"
                    app:layout_constraintEnd_toEndOf="@+id/editNome"
                    app:layout_constraintTop_toBottomOf="@+id/editNome"
                    android:hint="@string/cognome" android:background="#EFEFF0"
                    app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="8dp"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editNome" android:layout_marginStart="64dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="64dp"
                    app:layout_constraintEnd_toEndOf="parent" android:hint="@string/NOME" android:textSize="18sp"
                    android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/tvHint1"
                    android:background="#EFEFF0"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>