<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".LoginFragment">
    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.0">
        <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                     android:layout_height="wrap_content"
                                                     android:id="@+id/linearLayout">
            <Button
                    android:text="@string/Signin"
                    android:layout_width="250dp"
                    android:layout_height="50dp" android:id="@+id/btnSignin"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_background" android:layout_marginTop="24dp"
                    android:backgroundTint="#4D1CD6" android:textColor="#FFFFFF" android:textSize="18sp"/>
            <Button
                    android:text="@string/SignUp"
                    android:layout_width="250dp"
                    android:layout_height="50dp" android:id="@+id/btnSignup"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnSignin"
                    android:textSize="18sp" android:textColor="#4D1CD6"/>
            <TextView
                    android:text="@string/welcome1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/welcome" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="46dp" app:layout_constraintTop_toTopOf="parent" android:textSize="30sp"/>
            <TextView
                    android:text="@string/welcome2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/welcome2"
                    app:layout_constraintTop_toBottomOf="@+id/welcome" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                    android:textSize="30sp"/>
            <TextView
                    android:text="@string/Intro"
                    android:layout_width="318dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/intro" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/welcome2"
                    android:textSize="18sp" android:textAlignment="center"/>
            <ImageView
                    android:src="@drawable/login_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="0dp" android:id="@+id/login_background" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/intro"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>