<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent" android:id="@+id/constraintLayout">
    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0" android:id="@+id/scrollViewCompito">
        <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                     android:layout_height="699dp"
                                                     android:id="@+id/linearLayout" tools:layout_editor_absoluteY="8dp">
            <TextView
                    android:text="@string/compito"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/tvNomeCompito"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"
                    android:textSize="30sp"
                    android:textColor="#4D1CD6"
                    android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                    android:text="@string/incaricato"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/tvIncaricato"
                    android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/tvNomeCompito"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    app:layout_constraintStart_toStartOf="@+id/tvNomeCompito"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="300dp" android:id="@+id/tvDescrizionee"
                    android:text="@string/descrizione" android:visibility="visible" tools:visibility="visible"
                    android:background="?attr/colorButtonNormal"
                    app:layout_constraintStart_toStartOf="@+id/tvNomeCompito" android:textAlignment="center"
                    android:textSize="18sp" android:backgroundTint="#25818181"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvIncaricato" android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <Button
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:id="@+id/btnFatto"
                    android:text="@string/Done"
                    android:layout_marginTop="48dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvDescrizionee"
                    app:layout_constraintStart_toStartOf="@+id/tvDescrizionee" android:textColor="#FFFFFF"
                    android:backgroundTint="#4D1CD6"
                    app:layout_constraintEnd_toEndOf="@+id/tvDescrizionee"/>
            <TextView
                    android:text="@string/empty"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:id="@+id/Incaricato" app:layout_constraintStart_toEndOf="@+id/tvIncaricato"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintHorizontal_bias="0.085"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="@+id/tvIncaricato"
                    app:layout_constraintBottom_toBottomOf="@+id/tvIncaricato"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>