<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">
    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="1.0">
        <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                     android:layout_height="wrap_content"
                                                     android:id="@+id/linearLayout">
            <TextView
                    android:text="@string/inserire_compito"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/tvHint"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp"
                    android:textColor="#4D1CD6"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/editNomeCompito"
                    android:textSize="18sp"
                    android:gravity="center|top"
                    app:layout_constraintTop_toBottomOf="@+id/tvHint"
                    app:layout_constraintStart_toStartOf="@+id/tvHint" android:inputType="text"
                    android:hint="@string/compito" android:layout_marginTop="32dp"
                    android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="300dp" android:id="@+id/tvDescrizionee"
                    android:visibility="visible" tools:visibility="visible"
                    android:background="?attr/colorButtonNormal"
                    android:textSize="18sp" android:inputType="textMultiLine"
                    android:hint="@string/descrizione"
                    android:autofillHints=""
                    android:gravity="top"
                    android:textDirection="locale" android:singleLine="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                    android:lineSpacingExtra="10sp" android:fontFamily="monospace"
                    android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/editNomeCompito"
                    app:layout_constraintStart_toStartOf="@+id/editNomeCompito"
                    app:layout_constraintEnd_toEndOf="@+id/editNomeCompito"
                    android:backgroundTint="#25818181" android:textAlignment="center"/>
            <Button
                    android:text="@string/aggiungi"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:id="@+id/btnFatto"
                    android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/tvDescrizionee"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/tvDescrizionee"
                    app:layout_constraintEnd_toEndOf="@+id/tvDescrizionee" android:textColor="#FFFFFF"
                    android:backgroundTint="#4D1CD6"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>